--- a/L10/Views/Movie/About.cshtml
+++ b/L10/Views/Movie/About.cshtml
@@ -4,5 +4,5 @@
 About Us
 
     RPMovie provides an outlet for students, lecturers and members of the public to watch the latest up and coming movies at a affordable price.
-    Sign up TODAY to see what movies we will be screening in the near future!
+    Sign up TODAY to see what movies we will be screening in the near future! Hope to see you there!
 </p>
