--- a/L10/Views/Movie/Index.cshtml
+++ b/L10/Views/Movie/Index.cshtml
@@ -12,6 +12,7 @@
    <table id="tblPerform" class="table table-condensed table-hover">
       <thead>
          <tr>
+            <th>Movie ID</th>
             <th>Title</th>
             <th>Director</th>
             <th>Date/Time</th>
